@@ -1,3 +1,11 @@
+2002-11-26  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03485] fix mouse menu position
+	* main.c (do_mouse_action): use anchor_map is no active_map
+			check top left corner
+		(FRAME_WIDTH): added
+		(menuMs): adjust cursorX using FRAME_WIDTH
+
 2002-11-26  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* NEWS: func: CLOSE_TAB_MOUSE, MENU_MOUSE, MOVE_MOUSE, TAB_MOUSE
@@ -5148,4 +5156,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.557 2002/11/26 02:21:14 ukai Exp $
+$Id: ChangeLog,v 1.558 2002/11/26 03:42:28 ukai Exp $
